[package]
name = "valo-obs-buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "*"
native-tls = "*"
http = "*"
futures = "*"
futures-util = "*"
tokio-tungstenite = {version="*", features = ["native-tls"] }
tokio = {version="*", features = ["rt-multi-thread","rt","macros"] }